--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
             </div>
             <div class="pt-2">
                 <ul id="navigation" class="flex space-x-10"> 
-                    <li class="hover:text-blue-600"><a href="#">Home</a></li>
-                    <li class="hover:text-blue-600"><a href="#">Services</a></li>
-                    <li class="hover:text-blue-600"><a href="#">Portfolio</a></li>
+                    <li class="hover:text-blue-600"><a href="#home">Home</a></li>
+                    <li class="hover:text-blue-600"><a href="#services">Services</a></li>
+                    <li class="hover:text-blue-600"><a href="#ourteam">Portfolio</a></li>
                     <li class="hover:text-blue-600"><a href="#">Pages</a></li>
                     <li class="hover:text-blue-600"><a href="#">Blog</a></li>
-                    <li class="hover:text-blue-600"><a href="#">Contact</a></li>
+                    <li class="hover:text-blue-600"><a href="#contact">Contact</a></li>
                 </ul>
             </div>
             <div class="icons flex gap-3 ">
